Revision history for Yakuake::Sessions

0.2.8     2013-04-22 19:55:10
          - Improved synopsis
          - Added dist.ini to list of project files

0.1.6     2013-04-16 23:49:35
          - Updated documentation
          - Updated inc::Bob to v1.12
          - Updated .gitpre-commit to use global revision number

0.1       2012-11-04 03:43:11
          - Initial Release