@@ -1,8 +1,8 @@
-# @(#)Ident: 03podcoverage.t 2013-03-27 23:45 pjf ;
+# @(#)Ident: 03podcoverage.t 2013-04-22 22:44 pjf ;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 7 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 9 $ =~ /\d+/gmx );
 use File::Spec::Functions;
 use FindBin qw( $Bin );
 use lib catdir( $Bin, updir, q(lib) );
@@ -11,9 +11,8 @@ use English qw(-no_match_vars);
 use Test::More;
 
 BEGIN {
-   if (!-e catfile( $Bin, updir, q(MANIFEST.SKIP) )) {
-      plan skip_all => 'POD coverage test only for developers';
-   }
+   $ENV{AUTHOR_TESTING}
+      or plan skip_all => 'POD coverage test only for developers';
 }
 
 eval "use Test::Pod::Coverage 1.04";
