@@ -1,8 +1,8 @@
-# @(#)Ident: 04critic.t 2013-03-27 23:45 pjf ;
+# @(#)Ident: 04critic.t 2013-04-22 22:45 pjf ;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 7 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 9 $ =~ /\d+/gmx );
 use File::Spec::Functions;
 use FindBin qw( $Bin );
 use lib catdir( $Bin, updir, q(lib) );
@@ -11,18 +11,15 @@ use English qw(-no_match_vars);
 use Test::More;
 
 BEGIN {
-   if (!-e catfile( $Bin, updir, q(MANIFEST.SKIP) )) {
-      plan skip_all => 'Critic test only for developers';
-   }
+   $ENV{AUTHOR_TESTING} or plan skip_all => 'Critic test only for developers';
 }
 
 eval "use Test::Perl::Critic -profile => catfile( q(t), q(critic.rc) )";
 
 $EVAL_ERROR and plan skip_all => 'Test::Perl::Critic not installed';
 
-unless ($ENV{TEST_CRITIC}) {
-   plan skip_all => 'Environment variable TEST_CRITIC not set';
-}
+$ENV{TEST_CRITIC}
+   or plan skip_all => 'Environment variable TEST_CRITIC not set';
 
 all_critic_ok();
 
